developer/src/kmc/test/fixtures/invalid-projects/error_not_a_project_file.xxx
This is a file used to test the not a project file error (see test-infrastructureMessages.ts)